# ink-examples

erc20/: lib.rs
erc721/: Cargo.toml  lib.rs
