[package]
name = "erc721"
version = "4.3.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
publish = false

[dependencies]
ink = { version = "4.3", default-features = false }
prusti-contracts = { path = "/Users/zgrannan/prusti-dev/prusti-contracts/prusti-contracts" }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.5", default-features = false, features = ["derive"], optional = true }
cfg-if = "1.0"

[lib]
path = "lib.rs"

[features]
default = [
  "std",
  # "resource"
]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
resource = []
